# llm-projects

./: README.md  faq.db-shm  faq.db-wal  notebook.ipynb  persistent_rag.ipynb  persistent_rag_ingest.ipynb  pyproject.toml  rag_assistant.ipynb  rag_helper.py
