[project]
name = "llm-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.104.1",
    "google-adk>=2.1.0",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.0.5",
]
